--- a/Clock Project-1.html
+++ b/Clock Project-1.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-  <title>Giz Clock By Abhishek Verma New</title>
+  <title>Giz Clock By Abhishek Verma New Website</title>
   <script>
     let a;
     let date;
